# carik-bot

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  KIRO.md  LLM_INTEGRATION.md  PLUGIN_ARCHITECTURE.md  README.md  ROADMAP.md  SOUL.md  carik-bot.db  carik-bot.service  config.docker.yaml  config.yaml.example  run-bot.sh
gui/: README.md  package.json
gui/src-tauri/: tauri.conf.json
installers/: linux.sh  mac.sh  windows.ps1
scripts/: install-systemd.sh
skills/github/: SKILL.md
skills/help/: SKILL.md
skills/quotes/: SKILL.md
skills/rss/: SKILL.md
skills/weather/: SKILL.md
src/: main.rs
src/application/: errors.rs  mod.rs
src/application/messaging/: dispatcher.rs  middleware.rs  mod.rs  parser.rs
src/application/services/: command_service.rs  message_service.rs  mod.rs
src/domain/: mod.rs
src/domain/entities/: command.rs  message.rs  mod.rs  user.rs
src/domain/traits/: bot.rs  mod.rs  store.rs
src/infrastructure/: mod.rs
src/infrastructure/adapters/: mod.rs
src/infrastructure/adapters/console/: mod.rs
src/infrastructure/config/: mod.rs
src/infrastructure/database/: mod.rs
src/infrastructure/financial/: mod.rs
src/infrastructure/llm/: config.rs  mod.rs  tests.rs  traits.rs
src/infrastructure/llm/providers/: groq.rs  (+3 more)
src/infrastructure/miniapp/: mod.rs
src/infrastructure/plugins/: loader.rs  manifest.rs  mod.rs  registry.rs
src/infrastructure/storage/: mod.rs
src/infrastructure/webcrawler/: mod.rs
src/plugins/: manager.rs  mod.rs  trait_def.rs
src/plugins/a2a/: mod.rs
src/plugins/mcp/: mod.rs
tests/: llm_config_test.rs
(+1 files in other folders)
