[package]
name = "carik-bot"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
# For testing
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Config
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

# Error handling
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
libloading = "0.8"
regex-lite = "0.1"

# HTTP Client
reqwest = { version = "0.12", features = ["json"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
